--- a/index.html
+++ b/index.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head >
-  <meta charset="UTF-8" />
-  <title>Apoio para Mães</title>
-  <link rel="stylesheet" href="style.css" />
+<head>
+  <meta charset="UTF-8">
+  <title>Meu Site Azul</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="tela-inicial">
-    <div class="simbolo">🧩</div>
-    <h1>Bem-vinda!</h1>
-    <p>Um espaço de apoio para mães de crianças atípicas.</p>
-    <button onclick="mostrarAbas()">ENTRAR</button>
-  </div>
-
-  <div class="abas" style="display: none;">
-    <h2>Escolha um espaço:</h2>
-    <button onclick="mostrarConteudo('maes')">Entre Mães</button>
-    <button onclick="mostrarConteudo('cuidado')">Espaço do Cuidado</button>
-    <button onclick="mostrarConteudo('direitos')">Direitos e Benefícios</button>
-
-    <div id="conteudo" class="conteudo"></div>
-  </div>
-
-  <script src="script.js"></script>
+  <h1>Bem-vinda ao meu site!</h1>
+  <p>Esse é um espaço de apoio para mães de crianças atípicas.</p>
+  <button>Entrar</button>
 </body>
 </html>
